Implement onboarding updates and login UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_native_splash: ^2.4.7
   lottie: ^3.3.2
   smooth_page_indicator: ^2.0.1
+  iconsax: ^0.0.8
 
   # State_Management
   get: ^4.7.3
